--- a/src/website/space_invader.html
+++ b/src/website/space_invader.html
@@ -102,7 +102,8 @@
         var SPRITE_SHEET_SRC_ODD = 'assets/images/games/space_invader_odd.png';
         var LEFT_KEY = 37;
         var RIGHT_KEY = 39;
-        var SHOOT_KEY = 88;
+        // var SHOOT_KEY = 88; // x
+        var SHOOT_KEY = 32; // space
         var TEXT_BLINK_FREQ = 500;
         var PLAYER_CLIP_RECT = { x: 0, y: 192, w: 64, h: 64 };
         var ALIEN_BOTTOM_ROW = [ { x: 0, y: 0, w: 64, h: 64 }, { x: 0, y: 0, w: 64, h: 64 }];
@@ -384,7 +385,7 @@
                     }
 
                     var fireTest = Math.floor(Math.random() * (this.stepDelay + 1));
-                    if (getRandomArbitrary(0, 1000) <= 5 * (this.stepDelay + 1)) {
+                    if (getRandomArbitrary(0, 1000) <= 5 * (this.stepDelay + 1)*(wave+1)) {
                         this.doShoot = true;
                     }
                     this.position.x += 10 * alienDirection;
