--- a/src/website/index.html
+++ b/src/website/index.html
@@ -320,7 +320,7 @@
                     <div class="col-lg-7">
                         <div class="footer_widgets">
                             <div class="widgets_inner">
-                                <p class="mb-0">ENSI'NIGHT</p>
+                                <p class="mb-0">ENSI'NIGHT<a href="./easter.html" id="toto">G</a></p>
                                 <p class="mb-0">Nuit de l'info 2022</p>
                             </div>
                         </div>
