--- a/src/website/index.html
+++ b/src/website/index.html
@@ -263,6 +263,7 @@
                 </div>
                 <!-- item -->
                 <div class="col-lg-4 col-md-6 wow animate__animated animate__fadeInUp animate__delay-2s">
+                    <a href="redirectquizz.html">
                     <div class="service_block">
                         <div class="icon">
                             <i class="bi-newspaper"></i>
@@ -270,6 +271,7 @@
                         <h4 class="title">Quizz</h4>
                         <p class="text mb-0">Répondez aux questions pour mettre vos connaissances à l'épreuve</p>
                     </div>
+                    </a>
                 </div>
                 <!-- item -->
                 <div class="col-lg-4 col-md-6 wow animate__animated animate__fadeInUp animate__delay-3s">
