--- a/src/website/index.html
+++ b/src/website/index.html
@@ -93,6 +93,8 @@
                             <ul class="sub-menu">
                                 <li class="menu-item">
                                     <a href="space_invader.html">Shoot'em up</a>
+                                </li><li class="menu-item">
+                                    <a href="redirectquizz.html">Quiz</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="match-details.html">Match Details</a>
@@ -253,6 +255,7 @@
             <div class="row justify-content-center">
                 <!-- item -->
                 <div class="col-lg-4 col-md-6 wow animate__animated animate__fadeInUp animate__delay-1s">
+                    <a href="space_invader.html">
                     <div class="service_block">
                         <div class="icon">
                             <i class="bi-camera-reels"></i>
@@ -260,6 +263,7 @@
                         <h4 class="title">shoot'em up</h4>
                         <p class="text mb-0">Combattez les mst dans ce jeu d'arcade et tentez de battre votre meilleur score</p>
                     </div>
+                    </a>
                 </div>
                 <!-- item -->
                 <div class="col-lg-4 col-md-6 wow animate__animated animate__fadeInUp animate__delay-2s">
