--- a/src/website/index.html
+++ b/src/website/index.html
@@ -94,7 +94,7 @@
                                 <li class="menu-item">
                                     <a href="space_invader.html">Shoot'em up</a>
                                 </li><li class="menu-item">
-                                    <a href="redirectquizz.html">Quiz</a>
+                                    <a href="redirectquizz.php">Quiz</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="match-details.html">Match Details</a>
@@ -267,7 +267,7 @@
                 </div>
                 <!-- item -->
                 <div class="col-lg-4 col-md-6 wow animate__animated animate__fadeInUp animate__delay-2s">
-                    <a href="redirectquizz.html">
+                    <a href="redirectquizz.php">
                     <div class="service_block">
                         <div class="icon">
                             <i class="bi-newspaper"></i>
